BUG#39825 : Incorrect validity point reported during restore on Windows Vista

The backup.backup test was failing due to incorrect validity point
calculation on Windows Vista.