sql/backup/image_info.h
@@ -752,14 +752,8 @@ inline
 time_t Image_info::get_vp_time() const
 {
   struct tm time;
-  time_t tz_offset;
 
   bzero(&time,sizeof(time));
-
-  // Determine system timezone offset by calculating offset of the Epoch date.
-  time.tm_year=70;
-  time.tm_mday=1;
-  tz_offset= mktime(&time);
 
   time.tm_year= vp_time.year;
   time.tm_mon= vp_time.mon;
@@ -772,7 +766,7 @@ time_t Image_info::get_vp_time() const
     Note: mktime() assumes that time is expressed as local time and vp_time is
     in UTC. Hence we must correct the result to get it right.
    */ 
-  return mktime(&time) - tz_offset;
+  return mktime(&time) - (time_t)timezone;
 }
 
 /**
